--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,14 +2,16 @@ spring:
   application:
     name: rest-with-spring-boot-and-java-erudio
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.driver
+    driver-class-name: org.mariadb.jdbc.Driver
     url: jdbc:mariadb://localhost:3306/rest_with_spring_boot_erudio?useTimeZone=true&serverTimezone=UTC
     username: root
     password: 123
   jpa:
     hibernate:
       ddl-auto: update
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MariaDBDialect
     show-sql: false
+    open-in-view: false
+logging:
+  level:
+    root: WARN
+    #  br.com.nata: DEBUG
