--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,13 @@
 		</dependency>
 
 		<dependency>
+    		<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+    		<version>2.8.5</version>
+		</dependency>
+
+
+		<dependency>
 			<groupId>com.fasterxml.jackson.dataformat</groupId>
 			<artifactId>jackson-dataformat-xml</artifactId>
 		</dependency>
